--- a/extra-tests/classes/RollupFullRecalcTests.cls
+++ b/extra-tests/classes/RollupFullRecalcTests.cls
@@ -354,13 +354,12 @@ private class RollupFullRecalcTests {
     Rollup.DML = mock;
 
     Account acc = [SELECT Id FROM Account];
-    Account secondParent = new Account(Name = 'Second');
+    Account secondParent = new Account(Name = 'Second', NumberOfEmployees = 1);
     insert secondParent;
     List<ContactPointAddress> cpas = new List<ContactPointAddress>{
-      // ensure another matching item exists outside of the passed in list
       new ContactPointAddress(PreferenceRank = 500, ParentId = acc.Id, Name = 'One'),
-      // ensure that the PreferenceRank associated with the second parent DOES match
-      // the second parent's existing annual revenue; here we are looking to ensure only the parent records needing an update are saved
+      // ensure that the count of children records associated with the second parent DOES match
+      // the second parent's existing NumberOfEmployees; here we are looking to ensure only the parent records needing an update are saved
       new ContactPointAddress(ParentId = secondParent.Id, Name = 'Two')
     };
     insert cpas;
@@ -383,7 +382,8 @@ private class RollupFullRecalcTests {
         RollupOperation__c = 'COUNT',
         RollupFieldOnLookupObject__c = 'NumberOfEmployees',
         RollupFieldOnCalcItem__c = 'Id',
-        LookupFieldOnLookupObject__c = 'Id'
+        LookupFieldOnLookupObject__c = 'Id',
+        CalcItemWhereClause__c = 'Name != \'One\''
       )
     };
 
@@ -394,6 +394,61 @@ private class RollupFullRecalcTests {
     Map<Id, SObject> updatedRecordMap = new Map<Id, SObject>(mock.Records);
     System.assertEquals(1, updatedRecordMap.size());
     System.assertEquals(true, updatedRecordMap.containsKey(acc.Id));
+  }
+
+  @IsTest
+  static void updatesParentRecordsWhenAtLeastOneCmdtRecordDoesNotHaveWhereClause() {
+    RollupTestUtils.DMLMock mock = new RollupTestUtils.DMLMock();
+    Rollup.DML = mock;
+
+    Account acc = [SELECT Id FROM Account];
+    Account secondParent = new Account(Name = 'Second', NumberOfEmployees = 1);
+    insert secondParent;
+    List<ContactPointAddress> cpas = new List<ContactPointAddress>{
+      new ContactPointAddress(PreferenceRank = 500, ParentId = acc.Id, Name = 'One'),
+      new ContactPointAddress(ParentId = secondParent.Id, Name = 'Two')
+    };
+    insert cpas;
+
+    List<Rollup__mdt> metadata = new List<Rollup__mdt>{
+      new Rollup__mdt(
+        CalcItem__c = 'ContactPointAddress',
+        LookupObject__c = 'Account',
+        LookupFieldOnCalcItem__c = 'ParentId',
+        RollupOperation__c = 'SUM',
+        RollupFieldOnLookupObject__c = 'AnnualRevenue',
+        RollupFieldOnCalcItem__c = 'PreferenceRank',
+        LookupFieldOnLookupObject__c = 'Id',
+        CalcItemWhereClause__c = 'Name != \'Two\''
+      ),
+      new Rollup__mdt(
+        CalcItem__c = 'ContactPointAddress',
+        LookupObject__c = 'Account',
+        LookupFieldOnCalcItem__c = 'ParentId',
+        RollupOperation__c = 'COUNT',
+        RollupFieldOnLookupObject__c = 'NumberOfEmployees',
+        RollupFieldOnCalcItem__c = 'Id',
+        LookupFieldOnLookupObject__c = 'Id',
+        CalcItemWhereClause__c = 'Name != \'Two\''
+      ),
+      new Rollup__mdt(
+        CalcItem__c = 'ContactPointAddress',
+        LookupObject__c = 'Account',
+        LookupFieldOnCalcItem__c = 'ParentId',
+        RollupOperation__c = 'CONCAT',
+        RollupFieldOnLookupObject__c = 'Description',
+        RollupFieldOnCalcItem__c = 'Id',
+        LookupFieldOnLookupObject__c = 'Id'
+      )
+    };
+
+    Test.startTest();
+    Rollup.performBulkFullRecalc(metadata, Rollup.InvocationPoint.FROM_FULL_RECALC_LWC.name());
+    Test.stopTest();
+
+    Map<Id, SObject> updatedRecordMap = new Map<Id, SObject>(mock.Records);
+    System.assertEquals(true, updatedRecordMap.containsKey(secondParent.Id));
+    System.assertEquals(cpas[1].Id, updatedRecordMap.get(secondParent.Id).get('Description'));
   }
 
   @IsTest
