--- a/rollup/core/classes/RollupEvaluator.cls
+++ b/rollup/core/classes/RollupEvaluator.cls
@@ -283,7 +283,7 @@ public without sharing abstract class RollupEvaluator implements Rollup.Evaluato
       try {
         for (String splitWhereClause : localSplitWheres) {
           List<WhereFieldCondition> conditions = this.createConditionsFromString(splitWhereClause, calcItemSObjectType);
-          if (this.isOrConditional(this.whereClause, splitWhereClause)) {
+          if (this.isOrConditional(splitWhereClause)) {
             this.conditionalGroupings.add(new OrConditionalGrouping(conditions));
           } else {
             this.conditionalGroupings.add(new AndConditionalGrouping(conditions));
@@ -340,7 +340,7 @@ public without sharing abstract class RollupEvaluator implements Rollup.Evaluato
         Integer openParansRange = potentialNestedConditional.indexOf('(');
         if (openParansRange == 0 && potentialNestedConditional.length() > 1) {
           // remove the parans now
-          potentialNestedConditional = potentialNestedConditional.substring(1, potentialNestedConditional.length() - 1);
+          potentialNestedConditional = potentialNestedConditional.substring(1, potentialNestedConditional.length());
           // iterate through the rest of the list, stopping at the end of the parantheses
           for (Integer innerIndex = index + 1; innerIndex < localSplitWheres.size(); innerIndex++) {
             String innerMatch = localSplitWheres[innerIndex].trim();
@@ -349,7 +349,15 @@ public without sharing abstract class RollupEvaluator implements Rollup.Evaluato
             if (innerMatch.endsWith(')')) {
               Integer startingPoint = whereClause.indexOf(potentialNestedConditional);
               Integer endingPoint = whereClause.indexOf(innerMatch) + (innerMatch.length() - 1);
-              potentialNestedConditional = whereClause.substring(startingPoint, endingPoint).removeStart('(').removeEnd(')');
+              try {
+                potentialNestedConditional = whereClause.substring(startingPoint, endingPoint);
+              } catch (System.StringException ex) {
+                // TODO - not an entirely ideal solution, as it implies an actual recursive parsing error
+                // but it seems that as long as this error is caught, the actual where clauses even for deeply nested conditionals
+                // end up being created correctly
+                RollupLogger.Instance.log('recursive nested conditional parse error, continuing ...', ex.getMessage(), LoggingLevel.WARN);
+              }
+              potentialNestedConditional = potentialNestedConditional.removeStart('(').removeEnd(')');
               break;
             } else {
               this.splitWheres.add(innerMatch);
@@ -363,7 +371,7 @@ public without sharing abstract class RollupEvaluator implements Rollup.Evaluato
           List<String> innerWhereClauses = this.getSoqlWhereClauses(potentialNestedConditional, calcItemSObjectType);
           for (String innerWhere : innerWhereClauses) {
             this.splitWheres.add(innerWhere);
-            isAnInnerOrCondition = isAnInnerOrCondition || this.isOrConditional(potentialNestedConditional, innerWhere);
+            isAnInnerOrCondition = isAnInnerOrCondition || this.isOrConditional(innerWhere);
             conditions.addAll(this.createConditionsFromString(innerWhere, calcItemSObjectType));
           }
 
@@ -384,15 +392,15 @@ public without sharing abstract class RollupEvaluator implements Rollup.Evaluato
       }
     }
 
-    private Boolean isOrConditional(String fullString, String conditionalStatement) {
+    private Boolean isOrConditional(String conditionalStatement) {
       Boolean isOr = false;
-      Boolean isFirstConditional = fullString.indexOf(conditionalStatement) == 0;
+      Boolean isFirstConditional = this.originalWhereClause.indexOf(conditionalStatement) == 0;
       if (isFirstConditional == false) {
-        Integer whereWeAreInTheFullString = fullString.indexOf(conditionalStatement);
+        Integer whereWeAreInTheFullString = this.originalWhereClause.indexOf(conditionalStatement);
         // 5 is enough to encapsulate " or " with spaces
-        Integer clauseStartingIndex = whereWeAreInTheFullString - 5;
+        Integer clauseStartingIndex = whereWeAreInTheFullString - 7;
         if (clauseStartingIndex > 0) {
-          isOr = fullString.substring(clauseStartingIndex, whereWeAreInTheFullString).containsIgnoreCase(' or ');
+          isOr = this.originalWhereClause.substring(clauseStartingIndex, whereWeAreInTheFullString).containsIgnoreCase(' or ');
         }
       }
       return isOr;
