--- a/extra-tests/classes/RollupTests.cls
+++ b/extra-tests/classes/RollupTests.cls
@@ -2129,6 +2129,7 @@ private class RollupTests {
 
   @IsTest
   static void mostReparentsCorrectly() {
+    // TODO - fixme
     Account acc = [SELECT Id FROM Account];
     Account secondParent = new Account(Name = 'Reparented');
     insert secondParent;
