--- a/extra-tests/classes/RollupCalculatorTests.cls
+++ b/extra-tests/classes/RollupCalculatorTests.cls
@@ -1707,6 +1707,50 @@ private class RollupCalculatorTests {
     System.assertEquals(0, calc.getReturnValue());
   }
 
+  // NONE
+
+  @IsTest
+  static void noneReportsPositivesCorrectlyAsNumber() {
+    RollupCalculator calc = getCalculator(
+      0,
+      Rollup.Op.NONE,
+      Opportunity.Amount,
+      Account.AnnualRevenue,
+      new Rollup__mdt(),
+      RollupTestUtils.createId(Account.SObjectType),
+      Opportunity.AccountId
+    );
+    calc.setEvaluator(new RollupEvaluator.WhereFieldEvaluator('Amount > 0', Opportunity.SObjectType));
+
+    Opportunity oppOne = new Opportunity(Amount = 0);
+    Opportunity oppTwo = new Opportunity(Amount = 0);
+
+    calc.performRollup(new List<SObject>{ oppOne, oppTwo }, new Map<Id, SObject>());
+
+    System.assertEquals(1, calc.getReturnValue());
+  }
+
+  @IsTest
+  static void noneReportsNegativesCorrectlyAsNumber() {
+    RollupCalculator calc = getCalculator(
+      0,
+      Rollup.Op.NONE,
+      Opportunity.Amount,
+      Account.AnnualRevenue,
+      new Rollup__mdt(),
+      RollupTestUtils.createId(Account.SObjectType),
+      Opportunity.AccountId
+    );
+    calc.setEvaluator(new RollupEvaluator.WhereFieldEvaluator('Amount > 0', Opportunity.SObjectType));
+
+    Opportunity oppOne = new Opportunity(Amount = 1);
+    Opportunity oppTwo = new Opportunity(Amount = 0);
+
+    calc.performRollup(new List<SObject>{ oppOne, oppTwo }, new Map<Id, SObject>());
+
+    System.assertEquals(0, calc.getReturnValue());
+  }
+
   @IsTest
   static void shouldInvokeNoOpMethodsWithoutFail() {
     RollupCalculator calc = new RollupCalcEmptyMock();
